--- a/config/locales/menu.zh-CN.yml
+++ b/config/locales/menu.zh-CN.yml
@@ -49,7 +49,7 @@
     title: "标题"
     last_reply_time: "最后回复时间"
     reply: "回复"
-    index_node_navigation: "讨论节点分类导航"
+    index_node_navigation: "分类节点"
     highlight_topic: "置顶话题"
     statics: "统计信息"
     comments: "条评论"
